force-app/main/default/objects/I_ST_Application__c/I_ST_Application__c.object-meta.xml
<CustomObject>
    <description>Custom object to show under Related list of contact as part of IST-240</description>
    <label>Application</label>
    <nameField>
        <label>Application Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Applications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>