force-app/main/default/objects/I_ST_Application__c/fields/I_RM_Affiliation__c.field-meta.xml
<CustomField>
    <fullName>I_RM_Affiliation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Facilitate relationship with the Affiliation object</description>
    <label>Affiliation</label>
    <referenceTo>I_RM_Affiliation__c</referenceTo>
    <relationshipLabel>Applications</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>