force-app/main/default/objects/I_ST_Application__c/fields/I_ST_Applicant_ID__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Applicant_ID__c</fullName>
    <description>For IST-164</description>
    <externalId>true</externalId>
    <label>Applicant ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>