force-app/main/default/objects/I_ST_Application__c/fields/I_ST_Application_Closing_Date__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Application_Closing_Date__c</fullName>
    <formula>I_ST_Course_Availability__r.I_ST_Application_Closing_Date__c</formula>
    <label>Application Closing Date</label>
    <type>DateTime</type>
</CustomField>