force-app/main/default/objects/I_ST_Application__c/fields/I_ST_Application_Date__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Application_Date__c</fullName>
    <description>For ISt-164</description>
    <label>Application Date</label>
    <type>Date</type>
</CustomField>