force-app/main/default/objects/I_ST_Application__c/fields/I_ST_Application_Lapsed__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Application_Lapsed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Added for IST-457</description>
    <label>Application Lapsed</label>
    <type>Checkbox</type>
</CustomField>