force-app/main/default/objects/I_ST_Application__c/fields/I_ST_Application_Status__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Application_Status__c</fullName>
    <description>for IST-164</description>
    <label>Application Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Alternate offer considered</fullName>
            </value>
            <value>
                <fullName>Alternate Offer Declined</fullName>
            </value>
            <value>
                <fullName>Alternate offer made</fullName>
            </value>
            <value>
                <fullName>Application in error</fullName>
            </value>
            <value>
                <fullName>Application Withdrawn</fullName>
            </value>
            <value>
                <fullName>Await academic advice</fullName>
            </value>
            <value>
                <fullName>Await applicant comms</fullName>
            </value>
            <value>
                <fullName>Await further doco</fullName>
            </value>
            <value>
                <fullName>Awaiting interview</fullName>
            </value>
            <value>
                <fullName>Await required doco</fullName>
            </value>
            <value>
                <fullName>Conditional offer</fullName>
            </value>
            <value>
                <fullName>Escalated</fullName>
            </value>
            <value>
                <fullName>Make a conditional offer</fullName>
            </value>
            <value>
                <fullName>Make alternate offer</fullName>
            </value>
            <value>
                <fullName>Make an offer</fullName>
            </value>
            <value>
                <fullName>Not processed</fullName>
            </value>
            <value>
                <fullName>Offered</fullName>
            </value>
            <value>
                <fullName>Offer Rescinded</fullName>
            </value>
            <value>
                <fullName>Other Preference offered</fullName>
            </value>
            <value>
                <fullName>Pending results</fullName>
            </value>
            <value>
                <fullName>Rejected &amp; Referred</fullName>
            </value>
            <value>
                <fullName>Unsuccessful</fullName>
            </value>
            <value>
                <fullName>Unsuccessful, not notified</fullName>
            </value>
            <value>
                <fullName>Withdrawn preference</fullName>
            </value>
            <value>
                <fullName>Admitted And Not Enrolled</fullName>
            </value>
            <value>
                <fullName>Admitted And Enrolled</fullName>
            </value>
            <value>
                <fullName>Offer Admitted</fullName>
            </value>
            <value>
                <fullName>Offer Accepted</fullName>
            </value>
            <value>
                <fullName>Offer</fullName>
            </value>
            <value>
                <fullName>Offer Deferred</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>