force-app/main/default/objects/I_ST_Application__c/fields/I_ST_Application_Type__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Application_Type__c</fullName>
    <label>Application Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Regular</fullName>
            </value>
            <value>
                <fullName>Teaching</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>