force-app/main/default/objects/I_ST_Application__c/fields/I_ST_Campus__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Campus__c</fullName>
    <description>Get Campus name from the associated Course Parent.</description>
    <formula>I_ST_Course_Availability__r.L_AD_CourseInstance__r.L_AD_Campus_Name__c</formula>
    <label>Campus</label>
    <type>Text</type>
</CustomField>