force-app/main/default/objects/I_ST_Application__c/fields/I_ST_Contact__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Contact__c</fullName>
    <description>To render Contact related applications</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Applications</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>