force-app/main/default/objects/I_ST_Application__c/fields/I_ST_Course_Availability__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Course_Availability__c</fullName>
    <description>For IST-164</description>
    <label>Course Availability</label>
    <referenceTo>CourseAvailability__c</referenceTo>
    <relationshipLabel>Applications</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>