force-app/main/default/objects/I_ST_Application__c/fields/I_ST_Course_Name__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Course_Name__c</fullName>
    <description>Get Course name from the associated Course Parent.</description>
    <formula>I_ST_Course_Availability__r.L_AD_CourseInstance__r.L_AD_CourseParent__r.L_AD_Award_Title__c</formula>
    <label>Course Name</label>
    <type>Text</type>
</CustomField>