force-app/main/default/objects/I_ST_Application__c/fields/I_ST_Course_Preference_Number__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Course_Preference_Number__c</fullName>
    <description>For IST-164</description>
    <label>Course Preference Number</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>