force-app/main/default/objects/I_ST_Application__c/fields/I_ST_Intake_Period_Start__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Intake_Period_Start__c</fullName>
    <formula>I_ST_Course_Availability__r.L_AD_Intake_Period__r.L_AD_Start_Date__c</formula>
    <label>Intake Period Start Date</label>
    <type>Date</type>
</CustomField>