force-app/main/default/objects/I_ST_Application__c/fields/I_ST_Offer_Date__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Offer_Date__c</fullName>
    <label>Offer Date</label>
    <type>Date</type>
</CustomField>