force-app/main/default/objects/I_ST_Application__c/fields/I_ST_Offer_Lapse_Date__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Offer_Lapse_Date__c</fullName>
    <description>For IST-164</description>
    <label>Offer Lapse Date</label>
    <type>Date</type>
</CustomField>