force-app/main/default/objects/I_ST_Application__c/fields/I_ST_Provider_Course_Code__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Provider_Course_Code__c</fullName>
    <formula>I_ST_Course_Availability__r.I_ST_Provider_Course_Code__c</formula>
    <label>Provider Course Code</label>
    <type>Text</type>
</CustomField>