force-app/main/default/objects/I_ST_Application__c/fields/I_ST_Semester__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Semester__c</fullName>
    <description>Gets Intake name from related intake period Added for IST-338</description>
    <formula>TEXT(I_ST_Course_Availability__r.L_AD_Intake_Period__r.L_AD_Intake_Period_Name__c)</formula>
    <label>Semester</label>
    <type>Text</type>
</CustomField>