force-app/main/default/objects/I_ST_Application__c/fields/I_ST_Status_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Status_Change_Date__c</fullName>
    <label>Status Change Date</label>
    <type>DateTime</type>
</CustomField>